tests/testcases/errors/BCE0126-4.boo
"""
BCE0126-4.boo(7,13): BCE0126: It is not possible to evaluate an expression of type 'System.Void'.
"""
def foo() as void:
	pass
	
print "${foo()}"
